# video-craft-agent

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/api/: assets.py  video_jobs.py
backend/core/: config.py  frame_models.py  models.py  schemas.py
backend/services/: dify_client.py  frame_service.py  jobs_db.py  plan_validator.py  video_pipeline.py
backend/tests/: test_api.py  test_dify_client.py  test_edit_plan_schemas.py  test_features_v4.py  test_ffmpeg_editor.py  test_material_search.py  test_robustness.py  test_schemas.py  test_video_pipeline.py
backend/tools/: ffmpeg_editor.py  material_search.py
dify/: video-craft-agent.yml
docs/: 01-prd.md  02-technical-design.md  03-agent-workflow.md  04-mvp-roadmap.md  05-data-and-api-design.md  06-learning-plan.md  07-interview-packaging.md  08-dify-fastapi-architecture.md
frontend/: package-lock.json  streamlit_app.py
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AssetDetails.tsx  JobDetails.tsx  NewJobForm.tsx  Sidebar.tsx  UploadAssetForm.tsx
